--- a/project.css
+++ b/project.css
@@ -1,7 +1,8 @@
 body{
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-    margin: 0;
+    margin: 5px;
+    width:100%;
 }
 .header{
     display: flex;
