--- a/project.css
+++ b/project.css
@@ -243,21 +243,16 @@ font-size: 20px;
     .header span{
         padding: 2px;
     }
-
-    .logo-bg{
+ .logo-bg{
         display: flex;
         justify-content: space-evenly;
     }
-        
     .logo img{
         
         width: 150px;
         height: 150px;
-        
-        
-        }
-     
-        .navber{
+    }
+      .navber{
             background-color:rgb(9, 9, 160);
             width: 100%;
             display: flex;
@@ -281,6 +276,12 @@ font-size: 20px;
             justify-content: space-between;
          }
          .col4-row1{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+        }
+    .col4-row2{
             display: flex;
             flex-direction: column;
             align-items: center;
