--- a/project.css
+++ b/project.css
@@ -1,8 +1,9 @@
 body{
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-    margin: 5px;
+    margin: 0;
     width:100%;
+    height:100%;
 }
 .header{
     display: flex;
@@ -238,7 +239,7 @@ font-size: 20px;
        display: flex;
        justify-content: left;
        align-content: center;
-         width: 100%;
+        
     }
     .header span{
         padding: 2px;
@@ -254,7 +255,7 @@ font-size: 20px;
     }
       .navber{
             background-color:rgb(9, 9, 160);
-            width: 100%;
+            
             display: flex;
             flex-direction: column;
             align-items: center;
