--- a/project.css
+++ b/project.css
@@ -114,6 +114,7 @@ font-size: 20px;
 }
 .spare-parts img{
     width: 180px;
+    height: 200px;
     border-radius: 5px;
     padding: 20px 0;
     box-shadow: 3px 3px 2px ;
