--- a/project.css
+++ b/project.css
@@ -173,7 +173,7 @@ font-size: 20px;
     font-size: 20px;
      text-align: center;
      text-align: justify;
-     padding: 40px 30px 20px;
+     padding: 60px 30px 20px;
  }
  .content ul{
       color: #fff;
@@ -293,7 +293,7 @@ font-size: 20px;
             width: 100%;
             }
             .product-details{
-                width: 100%s;
+                width: 100%;
             }
             .section-content{
                 display: flex;
@@ -303,10 +303,13 @@ font-size: 20px;
             }
            .section-content .section-content1{
                 width: 100%;
-                background-color: rgb(243, 236, 236);
-            }
+                }
             .section-content .section-content2{
                width: 100%;
+            }
+            .content p{
+                font-size: 19px;
+                padding: 30px 30px 20px;
             }
             .footer-end{
                 display: flex;
