--- a/project.css
+++ b/project.css
@@ -9,7 +9,7 @@ body{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-     background-color: blue;
+      background-color: rgb(31, 31, 231);
     height: 30px;
     
     padding: 0 30px;
@@ -238,16 +238,13 @@ font-size: 20px;
     .header{
         background-color: rgb(9, 9, 160);
        display: flex;
-      
-       align-content: center;
-        
-    }
-    .header span{
-        padding: 2px;
-    }
- .logo-bg{
+       justify-content: space-evenly;
+      align-content: center;
+       }
+  .logo-bg{
         display: flex;
         justify-content: space-evenly;
+        align-items: center;
     }
     .logo img{
         
