--- a/project.css
+++ b/project.css
@@ -240,6 +240,7 @@ font-size: 20px;
        display: flex;
        justify-content: space-evenly;
       align-content: center;
+        padding: 0 0px;
        }
   .logo-bg{
         display: flex;
