--- a/project.css
+++ b/project.css
@@ -17,6 +17,7 @@ body{
 .header ul li{
     list-style: none;
     float: right;
+      padding: 5px;
     margin: auto;
     color: white;
 }
@@ -236,21 +237,30 @@ font-size: 20px;
 }
 @media only screen and (max-width: 600px){
     .header{
-        background-color: rgb(9, 9, 160);
-       display: flex;
-       justify-content: space-evenly;
-      align-content: center;
-        padding: 0 0px;
-       }
+        display: flex;
+        justify-content: space-between;
+         align-items: center;
+         height: 35px;
+     }
+    .header span{
+     padding: 0 5px 0 5px;
+      color: white;
+    }
   .logo-bg{
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-    }
+         }
     .logo img{
-        
-        width: 150px;
+        width: 200px;
         height: 150px;
+    }
+    .search span{
+        padding: 5px;
+         }
+    .search input{
+        width: 150px;
+        height: 25px;
     }
       .navber{
             background-color:rgb(9, 9, 160);
