--- a/project.css
+++ b/project.css
@@ -27,7 +27,7 @@ body{
     color: white;
 }
 .header span{
- 
+ padding:3px;
   color: white;
 }
                 /* menu */
@@ -241,7 +241,7 @@ font-size: 20px;
     text-align: center;
     font-size: 20px;
 }
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 606px){
     .header{
         display: flex;
         justify-content: space-between;
@@ -249,8 +249,8 @@ font-size: 20px;
          align-items: center;
          height: 35px;
      }
-
     .header span{
+        padding:3px;
      flex-direction: column;
      align-items: flex-start;
       color: white;
